tests/valid/object.d.ts
export declare function rgbObject(): void;
export declare function rgbaObject(): void;
