tests/invalid/strings.d.ts
export declare function invalidStringValues(): void;
